--- a/pom.xml
+++ b/pom.xml
@@ -48,7 +48,7 @@
     </build>
 
     <scm>
-        <developerConnection>scm:git:ssh@github.com:ferralucho/Spring-Pet-Clinic.git</developerConnection>
+        <developerConnection>scm:git:git@github.com:ferralucho/Spring-Pet-Clinic.git</developerConnection>
       <tag>v0.0.1-SNAPSHOT</tag>
   </scm>
 
