--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
     </parent>
     <groupId>ferralucho.springframework</groupId>
     <artifactId>spring-pet-clinic</artifactId>
-    <version>0.0.3</version>
+    <version>0.0.5</version>
     <packaging>pom</packaging>
     <name>spring-pet-clinic</name>
     <description>Spring Pet Clinic</description>
@@ -36,6 +36,14 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-release-plugin</artifactId>
+                <version>2.5.1</version>
+                <dependencies>
+                    <dependency>
+                        <groupId>org.apache.maven.shared</groupId>
+                        <artifactId>maven-invoker</artifactId>
+                        <version>2.2</version>
+                    </dependency>
+                </dependencies>
                 <configuration>
                     <checkModificationExcludes>
                         <checkModificationExclude>pom.xml</checkModificationExclude>
@@ -49,8 +57,8 @@
 
     <scm>
         <developerConnection>scm:git:git@github.com:ferralucho/Spring-Pet-Clinic.git</developerConnection>
-        <connection>scm:git:ssh@github.com:ferralucho/Spring-Pet-Clinic.git</connection>
-      <tag>v0.0.1-SNAPSHOT</tag>
+        <connection>scm:git:git@github.com:ferralucho/Spring-Pet-Clinic.git</connection>
+      <tag>spring-pet-clinic-0.0.5</tag>
   </scm>
 
 </project>
