--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
     </parent>
     <groupId>ferralucho.springframework</groupId>
     <artifactId>spring-pet-clinic</artifactId>
-    <version>0.0.5</version>
+    <version>0.0.6-SNAPSHOT</version>
     <packaging>pom</packaging>
     <name>spring-pet-clinic</name>
     <description>Spring Pet Clinic</description>
@@ -58,7 +58,7 @@
     <scm>
         <developerConnection>scm:git:git@github.com:ferralucho/Spring-Pet-Clinic.git</developerConnection>
         <connection>scm:git:git@github.com:ferralucho/Spring-Pet-Clinic.git</connection>
-      <tag>spring-pet-clinic-0.0.5</tag>
+      <tag>spring-pet-clinic-0.0.6</tag>
   </scm>
 
 </project>
